--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -173,7 +173,7 @@
                                                         </tr>
                                                     </tfoot>
                                                     <tbody>
-                                                        <tr>
+                                                        <tr class="tr1">
                                                             <td>
                                                                 <img class="drag-handle" src="@Url.Content("~/images/drag.png")" alt="click and drag to rearrange" />
                                                             </td>
@@ -181,24 +181,20 @@
                                                                 <input id="No" type="text" value="" class="tdno" disabled />
                                                             </td>
                                                             <td>
-                                                                <select class="select-3">
-                                                                    <option value="1">Service of Hydraulic Torque Bolt</option>
-                                                                    <option value="2">Service of On-Site Machining</option>
-                                                                    <option value="3">Service of Leak Sealing Online</option>
-                                                                    <option value="3">Service of Supply Man Power</option>
+                                                                <select id="cmbIncomeType">
                                                                 </select>
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="Time" name="Unit" class="input-1">
+                                                                <input type="text" id="UnitWeight" name="UnitWeight">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="Time" name="Qty" class="input-1">
+                                                                <input type="text" id="Qty" name="Qty" class="Quantity">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="Time" name="UnitPrice" class="input-3">
+                                                                <input type="text" id="UnitPrice" name="UnitPrice" class="Price">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="Time" name="Amount" class="input-4">
+                                                                <input type="text" id="Amount" name="Amount" class="Amount">
                                                             </td>
 
                                                             <td>
@@ -216,24 +212,20 @@
                                                                 <input id="No" type="text" value="" class="tdno" disabled />
                                                             </td>
                                                             <td>
-                                                                <select class="select-3">
-                                                                    <option value="1">Service of Hydraulic Torque Bolt</option>
-                                                                    <option value="2">Service of On-Site Machining</option>
-                                                                    <option value="3">Service of Leak Sealing Online</option>
-                                                                    <option value="3">Service of Supply Man Power</option>
+                                                                <select class="select1">
                                                                 </select>
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="Time" name="Unit" class="input-1">
+                                                                <input type="text" id="UnitWeight" name="UnitWeight" class="input-1">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="Time" name="Qty" class="input-1">
+                                                                <input type="text" id="Qty" name="Qty" class="input-1">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="Time" name="UnitPrice" class="input-3">
+                                                                <input type="text" id="UnitPrice" name="UnitPrice" class="input-3">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="Time" name="Amount" class="input-4">
+                                                                <input type="text" id="Amount" name="Amount" class="input-4">
                                                             </td>
                                                             <td>
                                                                 <img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" />
@@ -245,7 +237,7 @@
                                                     </tbody>
                                                 </table>
                                             </div>
-                                            <a id="add-row6" href="#">+ Add Row</a>
+                                            <a id="add-row6" href="#" onclick="AddRowIncome()">+ Add Row</a>
                                             
                                                 <table class="tableexpense">
                                                     <tr>
@@ -913,11 +905,75 @@
     });
 
     //------------------ Custom --------------------------
+    function AddRowIncome() {
+        $.ajax({
+            url: 'http://localhost:13131/api/IncomeMaster',
+            type: 'GET',
+            dataType: 'json',
+            success: function (data) {
+                data = JSON.parse(data);
+
+                $('.select1').find("option").remove();
+                $.each(data.Table, function (i) {           
+                    $('.select1').append($('<option></option>').val(data.Table[i].ID).html(data.Table[i].Detail));
+                });
+            },
+            failure: function () {
+                alert('Error');
+            }
+        });
+    }
+
+  
+    function update_amounts() {
+        var sum = 0.0;
+        $(".tr1").each(function () {
+            var qty = $(this).find(".Quantity").val();
+            var price = $(this).find(".Price").val();
+            var amount = (qty * price)
+            //alert(amount);
+            alert(qty);
+            alert(amount);
+            //sum += amount;
+            $(this).find('.Amount').val(amount);
+        });
+        //$('.total').val(sum);
+        //just update the total to sum  
+    }
+
     $(document).ready(function () {
+
+        $(".Price").change(function () {
+            update_amounts();
+        });
+        $(".Quantity").change(function () {
+            update_amounts();
+        });
+
+     
+
+
         $("#customerBody").on("click", "tr", function (e) {
             $("#txtCustomerName").val($(this).find("td:eq(3)").text());
             $("#hidCustID").val($(this).find("td:eq(1)").text());
         })
+
+        $.ajax({
+            url: 'http://localhost:13131/api/IncomeMaster',
+            type: 'GET',
+            dataType: 'json',
+            success: function (data) {
+                data = JSON.parse(data);
+                $.each(data.Table, function (i) {
+                    $('#cmbIncomeType').append($('<option></option>').val(data.Table[i].ID).html(data.Table[i].Detail));
+                });
+            },
+            failure: function () {
+                alert('Error');
+            }
+        });
+
+     
    
         var dataObject = { typeID: '001' };
         $.ajax({
