--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -173,7 +173,7 @@
                                                         </tr>
                                                     </tfoot>
                                                     <tbody>
-                                                        <tr class="tr1">
+                                                        <tr class="RowCal">
                                                             <td>
                                                                 <img class="drag-handle" src="@Url.Content("~/images/drag.png")" alt="click and drag to rearrange" />
                                                             </td>
@@ -185,16 +185,16 @@
                                                                 </select>
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="UnitWeight" name="UnitWeight">
+                                                                <input type="text" id="UnitWeight" name="UnitWeight" class="input-1">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="Qty" name="Qty" class="Quantity">
+                                                                <input type="number" id="Qty" name="Qty" class="Quantity">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="UnitPrice" name="UnitPrice" class="Price">
+                                                                <input type="number" id="UnitPrice" name="UnitPrice" class="Price">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="Amount" name="Amount" class="Amount">
+                                                                <input type="text" step="0.01" id="Amount" name="Amount" class="Amount">
                                                             </td>
 
                                                             <td>
@@ -204,7 +204,7 @@
                                                                 <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
                                                             </td>
                                                         </tr>
-                                                        <tr id="add-template6">
+                                                        <tr class="RowCal" id="add-template6">
                                                             <td>
                                                                 <img class="drag-handle" src="@Url.Content("~/images/drag.png")" alt="click and drag to rearrange" />
                                                             </td>
@@ -219,13 +219,13 @@
                                                                 <input type="text" id="UnitWeight" name="UnitWeight" class="input-1">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="Qty" name="Qty" class="input-1">
+                                                                <input type="number" id="Qty" name="Qty" class="Quantity" onchange="RowCal()">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="UnitPrice" name="UnitPrice" class="input-3">
+                                                                <input type="number"  id="UnitPrice" name="UnitPrice" class="Price" onchange="RowCal()">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="Amount" name="Amount" class="input-4">
+                                                                <input type="text" step="0.01" id="Amount" name="Amount" disabled class="Amount">
                                                             </td>
                                                             <td>
                                                                 <img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" />
@@ -905,7 +905,18 @@
     });
 
     //------------------ Custom --------------------------
-    function AddRowIncome() {
+    
+    function RowCal()
+    {
+        $(".Price").change(function () {
+            update_amounts();
+        });
+        $(".Quantity").change(function () {
+            update_amounts();
+        });
+    }
+
+        function AddRowIncome() {
         $.ajax({
             url: 'http://localhost:13131/api/IncomeMaster',
             type: 'GET',
@@ -923,35 +934,27 @@
             }
         });
     }
-
   
     function update_amounts() {
         var sum = 0.0;
-        $(".tr1").each(function () {
+        $(".RowCal").each(function () {
             var qty = $(this).find(".Quantity").val();
             var price = $(this).find(".Price").val();
             var amount = (qty * price)
-            //alert(amount);
-            alert(qty);
-            alert(amount);
-            //sum += amount;
+
             $(this).find('.Amount').val(amount);
         });
-        //$('.total').val(sum);
-        //just update the total to sum  
     }
 
     $(document).ready(function () {
-
         $(".Price").change(function () {
+            $('.Price').toLocaleString();
             update_amounts();
         });
         $(".Quantity").change(function () {
+            $('.Quantity').text($('.Quantity').toLocaleString());
             update_amounts();
         });
-
-     
-
 
         $("#customerBody").on("click", "tr", function (e) {
             $("#txtCustomerName").val($(this).find("td:eq(3)").text());
@@ -972,9 +975,7 @@
                 alert('Error');
             }
         });
-
-     
-   
+ 
         var dataObject = { typeID: '001' };
         $.ajax({
             url: 'http://localhost:13131/api/MasterService/',
