--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -188,13 +188,13 @@
                                                                 <input type="text" id="UnitWeight" name="UnitWeight" class="input-1">
                                                             </td>
                                                             <td>
-                                                                <input type="number" id="Qty" name="Qty" class="Quantity">
+                                                                <input type="text" id="Qty" name="Qty" class="Quantity number" placeholder="0">
                                                             </td>
                                                             <td>
-                                                                <input type="number" id="UnitPrice" name="UnitPrice" class="Price">
+                                                                <input type="text" id="UnitPrice" name="UnitPrice" class="Price number" placeholder="0">
                                                             </td>
                                                             <td>
-                                                                <input type="text" step="0.01" id="Amount" name="Amount" class="Amount">
+                                                                <input type="text" id="Amount" name="Amount" class="Amount number">
                                                             </td>
 
                                                             <td>
@@ -219,13 +219,13 @@
                                                                 <input type="text" id="UnitWeight" name="UnitWeight" class="input-1">
                                                             </td>
                                                             <td>
-                                                                <input type="number" id="Qty" name="Qty" class="Quantity" onchange="RowCal()">
+                                                                <input type="text" id="Qty" name="Qty" class="Quantity number" onchange="RowCal()">
                                                             </td>
                                                             <td>
-                                                                <input type="number"  id="UnitPrice" name="UnitPrice" class="Price" onchange="RowCal()">
+                                                                <input type="text"  id="UnitPrice" name="UnitPrice" class="Price number" onchange="RowCal()">
                                                             </td>
                                                             <td>
-                                                                <input type="text" step="0.01" id="Amount" name="Amount" disabled class="Amount">
+                                                                <input type="text" step="0.01" id="Amount" name="Amount" disabled class="Amount number">
                                                             </td>
                                                             <td>
                                                                 <img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" />
@@ -916,6 +916,32 @@
         });
     }
 
+    function update_amounts() {
+        var sum = 0.0;
+        $(".RowCal").each(function () {
+            var qty = parseFloat($(this).find(".Quantity").val().replace(",",""));
+            var price = parseFloat($(this).find(".Price").val().replace(",", ""));
+
+            var amount = qty * price;
+
+            $(this).find('.Amount').val(amount);
+        });
+    }
+
+    $('input.number').keyup(function (event) {
+
+        // skip for arrow keys
+        if (event.which >= 37 && event.which <= 40) return;
+
+        // format number
+        $(this).val(function (index, value) {
+            return value
+            .replace(/\D/g, "")
+            .replace(/\B(?=(\d{3})+(?!\d))/g, ",")
+            ;
+        });
+    });
+
         function AddRowIncome() {
         $.ajax({
             url: 'http://localhost:13131/api/IncomeMaster',
@@ -935,24 +961,11 @@
         });
     }
   
-    function update_amounts() {
-        var sum = 0.0;
-        $(".RowCal").each(function () {
-            var qty = $(this).find(".Quantity").val();
-            var price = $(this).find(".Price").val();
-            var amount = (qty * price)
-
-            $(this).find('.Amount').val(amount);
-        });
-    }
-
     $(document).ready(function () {
         $(".Price").change(function () {
-            $('.Price').toLocaleString();
             update_amounts();
         });
         $(".Quantity").change(function () {
-            $('.Quantity').text($('.Quantity').toLocaleString());
             update_amounts();
         });
 
