--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -194,7 +194,7 @@
                                                                 <input type="text" id="UnitPrice" class="Price number" placeholder="0">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="Amount" class="Amount" onchange="AddComma()">
+                                                                <input type="text" id="Amount" class="Amount">
                                                             </td>
 
                                                             <td>
@@ -928,18 +928,6 @@
                 ;
             });
         });
-    }
-
-    function AddComma(nStr) {
-        nStr += '';
-        x = nStr.split('.');
-        x1 = x[0];
-        x2 = x.length > 1 ? '.' + x[1] : '';
-        var rgx = /(\d+)(\d{3})/;
-        while (rgx.test(x1)) {
-            x1 = x1.replace(rgx, '$1' + ',' + '$2');
-        }
-        return x1 + x2;
     }
 
     function update_amounts() {
