--- a/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
@@ -28,7 +28,7 @@
             <ul class="form-style-1">
                 <li>
                     <label>Products <span class="required">*</span></label>
-                    <input type="text" id="SerialNo" name="field1" class="field-divided" placeholder="Serial" />&nbsp;<input type="text" id="MachineNo" name="field1" class="field-divided" placeholder="หมายเลขเครื่อง" />
+                    <input type="text" id="txtSerialNo" name="field1" class="field-divided" placeholder="Serial" />&nbsp;<input type="text" id="MachineNo" name="field1" class="field-divided" placeholder="หมายเลขเครื่อง" />
                 </li>
                 <li>
                     <label>ประเภทสินค้า</label>
@@ -76,7 +76,7 @@
                     <textarea name="field5" id="Remark" id="field5" class="field-long field-textarea"></textarea>
                 </li>
                 <li>
-                    <input type="submit" value="Save" id="Create" />
+                    <input type="submit" value="Save" id="Update" />
                 </li>
             </ul>
             <ul class="attachgrid">
@@ -176,38 +176,28 @@
     }
 </div>
 <script type="text/javascript">
-    //var ProductTypeVal
-    //var UnitWeightVal
-    //console.log(ProductTypeVal);
-
-    //function cmbProductType_Change()
-    //{
-    //    ProductTypeVal = $("#cmbProductType").find(":selected").val();
-    //}
-
-    //function cmbUnitWeight_Change()
-    //{
-    //    UnitWeightVal = $("#cmbUnitWeight").find(":selected").val();
-    //}
 
     $(document).ready(function () {
         $("#ReceiveDate").datepicker();
 
-        var dataObject= @Request.Params["id"];
+        var id = { ID : @Request.Params["id"]};
+        //console.log(dataObject);
         $.ajax(
        {
-           url: 'http://localhost:13131/api/Product/',
+           url: 'http://localhost:13131/api/Product/'+id,
            type: 'GET',
            data: dataObject,
            datatype: 'json',
            success: function (data) {
                data = JSON.parse(data);
-               $("#txtSerialNo").val(data.Table[0].SerialNo),$("#txtMachineNo").val(data.Table[0].MachineNo), $("#cmbProductType").val(data.Table[0].ProductType),
-               $("#txtBrand").val(data.Table[0].Brand),$("#txtSize").val(data.Table[0].Size),$("#txtModel").val(data.Table[0].Model),$("#txtLifetime").val(data.Table[0].Lifetime),
-               $("#dtReceiveDate").val(data.Table[0].ReceiveDate),$("#cmbUnitWeight").val(data.Table[0].Unit),$("#txtBalance").val(data.Table[0].Balance),$("#txtRemain").val(data.Table[0].Remain),$("#txtLost").val(data.Table[0].Lost),$("#txtRepair").val(data.Table[0].Repair),$("#txtBreak").val(data.Table[0].Break),$("#txtRemark").val(data.Table[0].Remark)
+               alert(data)
+               //$("#txtSerialNo").val(data.Table[0].SerialNo)
+               //,$("#txtMachineNo").val(data.Table[0].MachineNo), $("#cmbProductType").val(data.Table[0].ProductType),
+               //$("#txtBrand").val(data.Table[0].Brand),$("#txtSize").val(data.Table[0].Size),$("#txtModel").val(data.Table[0].Model),$("#txtLifetime").val(data.Table[0].Lifetime),
+               //$("#dtReceiveDate").val(data.Table[0].ReceiveDate),$("#cmbUnitWeight").val(data.Table[0].Unit),$("#txtBalance").val(data.Table[0].Balance),$("#txtRemain").val(data.Table[0].Remain),$("#txtLost").val(data.Table[0].Lost),$("#txtRepair").val(data.Table[0].Repair),$("#txtBreak").val(data.Table[0].Break),$("#txtRemark").val(data.Table[0].Remark);
            },
            error: function (msg) {
-               alert(msg);
+               alert("Test");
            }
 
        });
