--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -23,6 +23,9 @@
         <script src="@Url.Content("~/Scripts/bootstrap.js")" type="text/javascript"></script>
         <script src="@Url.Content("~/Scripts/bootstrap.min.js")" type="text/javascript"></script>
 
+        @* ---------------------------- NumberFormat -------------------------- *@
+        <script src="@Url.Content("~/Scripts/NumberFormat/jquery.number.js")" type="text/javascript"></script>
+
         <script language="javascript" type="text/javascript">
         $(function () {
             $("#products").accordion();
